--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Show.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Show.cshtml
@@ -20,36 +20,8 @@ Affiliate: <b>@Model.Campaign.Affiliate.AffiliateName (@Model.Campaign.Affiliate
 @Ajax.ActionLink("Refresh", "Show", "CampaignDrops", new { id = Model.CampaignDropId }, ajaxOptions)
 <fieldset>
     <legend>Campaign Drop</legend>
-    <table>
-        <tr>
-            <td>@Html.LabelFor(m => m.Date)</td>
-            <td>@Html.DisplayFor(m => m.Date, "Date")</td>
-        </tr>
-        <tr>
-            <td>@Html.LabelFor(m => m.FromEmail)</td>
-            <td>@Html.DisplayFor(m => m.FromEmail)</td>
-        </tr>
-        <tr>
-            <td>@Html.LabelFor(m => m.Subject)</td>
-            <td>@Html.DisplayFor(m => m.Subject)</td>
-        </tr>
-        <tr>
-            <td>@Html.LabelFor(m => m.Cost)</td>
-            <td>@Html.DisplayFor(m => m.Cost, "Money")</td>
-        </tr>
-        <tr>
-            <td>@Html.LabelFor(m => m.Volume)</td>
-            <td>@Html.DisplayFor(m => m.Volume)</td>
-        </tr>
-        <tr>
-            <td>@Html.LabelFor(m => m.Opens)</td>
-            <td>@Html.DisplayFor(m => m.Opens)</td>
-        </tr>
-        <tr>
-            <td>@Html.LabelFor(m => m.CombineCreatives)</td>
-            <td>@Html.DisplayFor(m => m.CombineCreatives)</td>
-        </tr>
-    </table>
+    @Html.Partial("FieldsTable")
+
     @foreach (var creativeStat in Model.CreativeStats)
     {
         //Html.RenderPartial("../CreativeStats/Show", creativeStat);
