--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/Show.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/Show.cshtml
@@ -96,12 +96,14 @@ Advertiser: <b>@Model.Offer.Advertiser.AdvertiserName</b><br />
 @if (!reportSent)
 {
     var drops = (IEnumerable<ClientPortal.Data.Contexts.CampaignDrop>)ViewData["CampaignDrops"];
-    if (drops.Count() > 0) {
+    if (drops.Any()) {
         using (Ajax.BeginForm("AddDrop", ajaxOpts_Post))
         {
             var dropSelectList = new SelectList(drops, "CampaignDropId", "DisplayName");
             <text>Add Drop:</text>
-            @Html.DropDownList("CampaignDropId", dropSelectList)
+            <table><tr><td>
+                @Html.DropDownList("CampaignDropId", dropSelectList)
+            </td></tr></table>
             <input type="submit" value="Add" />
             @Html.HiddenFor(m => m.CPMReportId)
         }
