--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Shared/EditorTemplates/CreativeDropDown.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Shared/EditorTemplates/CreativeDropDown.cshtml
@@ -1,3 +1,3 @@
 ﻿@model IEnumerable<ClientPortal.Data.Contexts.Creative>
 
-@Html.DropDownList("", new SelectList(Model, "CreativeId", "DisplayName"))
+@Html.DropDownList("", new SelectList(Model, "CreativeId", "DisplayNameWithType"))
