--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/Creatives.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/Creatives.cshtml
@@ -15,7 +15,7 @@ When done: @Ajax.ActionLink("Synch creative stats", "SynchCreativeStats", new { 
 @{
     ViewBag.ShowDropDetails = false;
 }
-@Html.Partial("ReviewDrop", Model.CampaignDrop)
+@Html.Partial("ShowDrop", Model.CampaignDrop)
 
 </td></tr></table>
 
