--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/ShowDrop.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/ShowDrop.cshtml
@@ -6,6 +6,7 @@
 
     bool showCreativeStats = ViewBag.ShowCreativeStats ?? false;
     bool showAddRemoveCreatives = ViewBag.ShowAddRemoveCreatives ?? true;
+    bool showCreativeThumbnailLink = ViewBag.ShowCreativeThumbnailLink ?? false;
     bool showWizardEditLink = ViewBag.ShowWizardEditLink ?? false;
     bool first = true;
 }
@@ -42,13 +43,14 @@
                 @if (showAddRemoveCreatives)
                 {
                     <tr>
-                        <td colspan="2">@Ajax.ActionLink("Remove from drop", "RemoveCreative", new {campaigndropid = Model.CampaignDropId, creativestatid = creativeStat.CreativeStatId }, ajaxOpts_RemoveCreative)</td>
+                        <td colspan="2">@Ajax.ActionLink("Remove from drop", "RemoveCreative", new { campaigndropid = Model.CampaignDropId, creativestatid = creativeStat.CreativeStatId }, ajaxOpts_RemoveCreative)</td>
                     </tr>
                 }
-                @if (first)
+                @if (first && showCreativeThumbnailLink)
                 {
+                    string linkText = (creativeStat.Creative.Thumbnail == null ? "Add Thumbnail" : "View/Edit Thumbnail");
                     <tr>
-                        <td colspan="2"><i>Coming soon: Add/Edit thumbnail</i></td>
+                        <td colspan="2">@Ajax.ActionLink(linkText, "CreativeThumbnail", new { campaigndropid = Model.CampaignDropId, creativeid = creativeStat.CreativeId }, ajaxOptions)</td>
                     </tr>
                 }
             </table>
