--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/CreativeThumbnail.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/CreativeThumbnail.cshtml
@@ -15,5 +15,5 @@
 </td></tr></table>
 
 Back to:
-@Ajax.ActionLink("Final Review", "Show", "CampaignDropsWizard", new { id = Model.CampaignDrop.CampaignDropId, step = (int)ClientPortal.Web.Areas.Admin.Models.CampaignDropWizardVM.WizardStep.FinalReview }, ajaxOptions)
+@Ajax.ActionLink("Final Review", "Show", new { id = Model.CampaignDrop.CampaignDropId, step = (int)ClientPortal.Web.Areas.Admin.Models.CampaignDropWizardVM.WizardStep.FinalReview }, ajaxOptions)
 <br /><br />
