--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/Creatives.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/Creatives.cshtml
@@ -19,6 +19,6 @@ When done: @Ajax.ActionLink("Synch creative stats", "SynchCreativeStats", new { 
 
 </td></tr></table>
 
-@Ajax.ActionLink("Back", "Show", "CampaignDropsWizard", new { id = Model.CampaignDrop.CampaignDropId, step = (int)(Model.Step - 1) }, ajaxOptions) |
-@Ajax.ActionLink("Skip", "Show", "CampaignDropsWizard", new { id = Model.CampaignDrop.CampaignDropId, step = (int)(Model.Step + 1) }, ajaxOptions)
+@Ajax.ActionLink("Back", "Show", new { id = Model.CampaignDrop.CampaignDropId, step = (int)(Model.Step - 1) }, ajaxOptions) |
+@Ajax.ActionLink("Skip", "Show", new { id = Model.CampaignDrop.CampaignDropId, step = (int)(Model.Step + 1) }, ajaxOptions)
 <br /><br />
